Fix #30306: crash duplicating object with action actuator but no animation data.